--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8">
+        <meta name="keywords" content="毕业照,闺蜜照,室友照,个人写真,拍照,照片">
+        <meta name="description" content="映画一言，留下你的美好回忆">
         <title>ITIGEN | 映画一言</title>
-        <meta name="keywords" content="毕业照,闺蜜照,室友照">
-        <meta name="description" content="毕业照留念">
-
         <link href="static/main.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="static/fullpage/jquery.fullPage.css" />
