--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8">
-        <meta name="keywords" content="毕业照,闺蜜照,室友照,个人写真,拍照,照片">
+        <meta name="keywords" content="毕业照,闺蜜照,室友照,个人写真,拍照,照片,映画一言">
         <meta name="description" content="映画一言，留下你的美好回忆">
         <title>ITIGEN | 映画一言</title>
         <link href="static/main.css" rel="stylesheet" type="text/css">
